1CUATRIMESTRE/wPROYECTOS ECLIPSE/EstrategiasCSV/src/gramaticas/SnakecsvParser.java
// Generated from D:/Escritorio/UNIVERSIDAD/3º CARRERA/1 CUATRIMESTRE/wPROYECTOS ECLIPSE/EstrategiasCSV/src/gramaticas/SnakecsvParser.g4 by ANTLR 4.7.1

	package gramaticas;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SnakecsvParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FUNCTION=1, INCLUDE=2, WHILE=3, IF=4, ELSE=5, BEGIN=6, END=7, TIPO=8, 
		ID=9, INT=10, FLOAT=11, STRING=12, COMENTARIO_LINEA=13, COMENTARIO_BLOQUE=14, 
		NEWLINE=15, PI=16, PD=17, COMA=18, OPERACION=19, FINAL=20, ASIGNAR=21, 
		DOBLEPUNTO=22, WS=23, TAB=24;
	public static final int
		RULE_prog = 0, RULE_funcion = 1, RULE_control = 2, RULE_llamadafuncion = 3, 
		RULE_declaracion = 4, RULE_asignacion = 5, RULE_include = 6, RULE_bloque = 7, 
		RULE_cuerpo_funcion = 8, RULE_cuerpo_control = 9, RULE_header_funcion = 10, 
		RULE_header_control = 11, RULE_arg = 12, RULE_expr = 13, RULE_pr_funcion = 14, 
		RULE_pr_tipo = 15, RULE_pr_bloque = 16, RULE_pr_control = 17, RULE_pr_include = 18, 
		RULE_nombre_funcion = 19, RULE_nombre_variable = 20, RULE_nombre_libreria = 21, 
		RULE_cadena = 22, RULE_numero = 23, RULE_flotante = 24, RULE_tipo_devolucion = 25, 
		RULE_basura = 26, RULE_parametros = 27;
	public static final String[] ruleNames = {
		"prog", "funcion", "control", "llamadafuncion", "declaracion", "asignacion", 
		"include", "bloque", "cuerpo_funcion", "cuerpo_control", "header_funcion", 
		"header_control", "arg", "expr", "pr_funcion", "pr_tipo", "pr_bloque", 
		"pr_control", "pr_include", "nombre_funcion", "nombre_variable", "nombre_libreria", 
		"cadena", "numero", "flotante", "tipo_devolucion", "basura", "parametros"
	};

	private static final String[] _LITERAL_NAMES = {
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "FUNCTION", "INCLUDE", "WHILE", "IF", "ELSE", "BEGIN", "END", "TIPO", 
		"ID", "INT", "FLOAT", "STRING", "COMENTARIO_LINEA", "COMENTARIO_BLOQUE", 
		"NEWLINE", "PI", "PD", "COMA", "OPERACION", "FINAL", "ASIGNAR", "DOBLEPUNTO", 
		"WS", "TAB"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SnakecsvParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SnakecsvParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<FuncionContext> funcion() {
			return getRuleContexts(FuncionContext.class);
		}
		public FuncionContext funcion(int i) {
			return getRuleContext(FuncionContext.class,i);
		}
		public List<ControlContext> control() {
			return getRuleContexts(ControlContext.class);
		}
		public ControlContext control(int i) {
			return getRuleContext(ControlContext.class,i);
		}
		public List<LlamadafuncionContext> llamadafuncion() {
			return getRuleContexts(LlamadafuncionContext.class);
		}
		public LlamadafuncionContext llamadafuncion(int i) {
			return getRuleContext(LlamadafuncionContext.class,i);
		}
		public List<AsignacionContext> asignacion() {
			return getRuleContexts(AsignacionContext.class);
		}
		public AsignacionContext asignacion(int i) {
			return getRuleContext(AsignacionContext.class,i);
		}
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public List<IncludeContext> include() {
			return getRuleContexts(IncludeContext.class);
		}
		public IncludeContext include(int i) {
			return getRuleContext(IncludeContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(SnakecsvParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(SnakecsvParser.NEWLINE, i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnakecsvParserVisitor ) return ((SnakecsvParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNCTION) | (1L << INCLUDE) | (1L << WHILE) | (1L << IF) | (1L << ELSE) | (1L << TIPO) | (1L << ID))) != 0)) {
				{
				{
				setState(62);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(56);
					funcion();
					}
					break;
				case 2:
					{
					setState(57);
					control();
					}
					break;
				case 3:
					{
					setState(58);
					llamadafuncion();
					}
					break;
				case 4:
					{
					setState(59);
					asignacion();
					}
					break;
				case 5:
					{
					setState(60);
					declaracion();
					}
					break;
				case 6:
					{
					setState(61);
					include();
					}
					break;
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(64);
					match(NEWLINE);
					}
				}

				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionContext extends ParserRuleContext {
		public Header_funcionContext header_funcion() {
			return getRuleContext(Header_funcionContext.class,0);
		}
		public Cuerpo_funcionContext cuerpo_funcion() {
			return getRuleContext(Cuerpo_funcionContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(SnakecsvParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(SnakecsvParser.NEWLINE, i);
		}
		public FuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).enterFuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).exitFuncion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnakecsvParserVisitor ) return ((SnakecsvParserVisitor<? extends T>)visitor).visitFuncion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncionContext funcion() throws RecognitionException {
		FuncionContext _localctx = new FuncionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_funcion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			header_funcion();
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(73);
				match(NEWLINE);
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			cuerpo_funcion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ControlContext extends ParserRuleContext {
		public Header_controlContext header_control() {
			return getRuleContext(Header_controlContext.class,0);
		}
		public Cuerpo_controlContext cuerpo_control() {
			return getRuleContext(Cuerpo_controlContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(SnakecsvParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(SnakecsvParser.NEWLINE, i);
		}
		public ControlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_control; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).enterControl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).exitControl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnakecsvParserVisitor ) return ((SnakecsvParserVisitor<? extends T>)visitor).visitControl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ControlContext control() throws RecognitionException {
		ControlContext _localctx = new ControlContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_control);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			header_control();
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(82);
				match(NEWLINE);
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			cuerpo_control();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LlamadafuncionContext extends ParserRuleContext {
		public Nombre_funcionContext nombre_funcion() {
			return getRuleContext(Nombre_funcionContext.class,0);
		}
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public BasuraContext basura() {
			return getRuleContext(BasuraContext.class,0);
		}
		public LlamadafuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_llamadafuncion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).enterLlamadafuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).exitLlamadafuncion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnakecsvParserVisitor ) return ((SnakecsvParserVisitor<? extends T>)visitor).visitLlamadafuncion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LlamadafuncionContext llamadafuncion() throws RecognitionException {
		LlamadafuncionContext _localctx = new LlamadafuncionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_llamadafuncion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			nombre_funcion();
			setState(91);
			parametros();
			setState(92);
			basura();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public Pr_tipoContext pr_tipo() {
			return getRuleContext(Pr_tipoContext.class,0);
		}
		public Nombre_variableContext nombre_variable() {
			return getRuleContext(Nombre_variableContext.class,0);
		}
		public TerminalNode ASIGNAR() { return getToken(SnakecsvParser.ASIGNAR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BasuraContext basura() {
			return getRuleContext(BasuraContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).exitDeclaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnakecsvParserVisitor ) return ((SnakecsvParserVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaracion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			pr_tipo();
			setState(95);
			nombre_variable();
			setState(96);
			match(ASIGNAR);
			setState(97);
			expr(0);
			setState(98);
			basura();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public Nombre_variableContext nombre_variable() {
			return getRuleContext(Nombre_variableContext.class,0);
		}
		public TerminalNode ASIGNAR() { return getToken(SnakecsvParser.ASIGNAR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BasuraContext basura() {
			return getRuleContext(BasuraContext.class,0);
		}
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).exitAsignacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnakecsvParserVisitor ) return ((SnakecsvParserVisitor<? extends T>)visitor).visitAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			nombre_variable();
			setState(101);
			match(ASIGNAR);
			setState(102);
			expr(0);
			setState(103);
			basura();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeContext extends ParserRuleContext {
		public Pr_includeContext pr_include() {
			return getRuleContext(Pr_includeContext.class,0);
		}
		public Nombre_libreriaContext nombre_libreria() {
			return getRuleContext(Nombre_libreriaContext.class,0);
		}
		public BasuraContext basura() {
			return getRuleContext(BasuraContext.class,0);
		}
		public IncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).enterInclude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).exitInclude(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnakecsvParserVisitor ) return ((SnakecsvParserVisitor<? extends T>)visitor).visitInclude(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IncludeContext include() throws RecognitionException {
		IncludeContext _localctx = new IncludeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_include);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			pr_include();
			setState(106);
			nombre_libreria();
			setState(107);
			basura();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BloqueContext extends ParserRuleContext {
		public Pr_bloqueContext pr_bloque() {
			return getRuleContext(Pr_bloqueContext.class,0);
		}
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).enterBloque(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).exitBloque(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnakecsvParserVisitor ) return ((SnakecsvParserVisitor<? extends T>)visitor).visitBloque(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_bloque);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			pr_bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cuerpo_funcionContext extends ParserRuleContext {
		public List<Pr_bloqueContext> pr_bloque() {
			return getRuleContexts(Pr_bloqueContext.class);
		}
		public Pr_bloqueContext pr_bloque(int i) {
			return getRuleContext(Pr_bloqueContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(SnakecsvParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(SnakecsvParser.NEWLINE, i);
		}
		public List<LlamadafuncionContext> llamadafuncion() {
			return getRuleContexts(LlamadafuncionContext.class);
		}
		public LlamadafuncionContext llamadafuncion(int i) {
			return getRuleContext(LlamadafuncionContext.class,i);
		}
		public List<AsignacionContext> asignacion() {
			return getRuleContexts(AsignacionContext.class);
		}
		public AsignacionContext asignacion(int i) {
			return getRuleContext(AsignacionContext.class,i);
		}
		public List<ControlContext> control() {
			return getRuleContexts(ControlContext.class);
		}
		public ControlContext control(int i) {
			return getRuleContext(ControlContext.class,i);
		}
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public Cuerpo_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo_funcion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).enterCuerpo_funcion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).exitCuerpo_funcion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnakecsvParserVisitor ) return ((SnakecsvParserVisitor<? extends T>)visitor).visitCuerpo_funcion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cuerpo_funcionContext cuerpo_funcion() throws RecognitionException {
		Cuerpo_funcionContext _localctx = new Cuerpo_funcionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cuerpo_funcion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			pr_bloque();
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(112);
				match(NEWLINE);
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHILE) | (1L << IF) | (1L << ELSE) | (1L << TIPO) | (1L << ID))) != 0)) {
				{
				{
				setState(122);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(118);
					llamadafuncion();
					}
					break;
				case 2:
					{
					setState(119);
					asignacion();
					}
					break;
				case 3:
					{
					setState(120);
					control();
					}
					break;
				case 4:
					{
					setState(121);
					declaracion();
					}
					break;
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(124);
					match(NEWLINE);
					}
					}
					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135);
			pr_bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cuerpo_controlContext extends ParserRuleContext {
		public List<Pr_bloqueContext> pr_bloque() {
			return getRuleContexts(Pr_bloqueContext.class);
		}
		public Pr_bloqueContext pr_bloque(int i) {
			return getRuleContext(Pr_bloqueContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(SnakecsvParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(SnakecsvParser.NEWLINE, i);
		}
		public List<LlamadafuncionContext> llamadafuncion() {
			return getRuleContexts(LlamadafuncionContext.class);
		}
		public LlamadafuncionContext llamadafuncion(int i) {
			return getRuleContext(LlamadafuncionContext.class,i);
		}
		public List<AsignacionContext> asignacion() {
			return getRuleContexts(AsignacionContext.class);
		}
		public AsignacionContext asignacion(int i) {
			return getRuleContext(AsignacionContext.class,i);
		}
		public List<ControlContext> control() {
			return getRuleContexts(ControlContext.class);
		}
		public ControlContext control(int i) {
			return getRuleContext(ControlContext.class,i);
		}
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public Cuerpo_controlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo_control; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).enterCuerpo_control(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).exitCuerpo_control(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnakecsvParserVisitor ) return ((SnakecsvParserVisitor<? extends T>)visitor).visitCuerpo_control(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cuerpo_controlContext cuerpo_control() throws RecognitionException {
		Cuerpo_controlContext _localctx = new Cuerpo_controlContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cuerpo_control);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			pr_bloque();
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(138);
				match(NEWLINE);
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHILE) | (1L << IF) | (1L << ELSE) | (1L << TIPO) | (1L << ID))) != 0)) {
				{
				{
				setState(148);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(144);
					llamadafuncion();
					}
					break;
				case 2:
					{
					setState(145);
					asignacion();
					}
					break;
				case 3:
					{
					setState(146);
					control();
					}
					break;
				case 4:
					{
					setState(147);
					declaracion();
					}
					break;
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(150);
					match(NEWLINE);
					}
					}
					setState(155);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(161);
			pr_bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Header_funcionContext extends ParserRuleContext {
		public Pr_funcionContext pr_funcion() {
			return getRuleContext(Pr_funcionContext.class,0);
		}
		public Nombre_funcionContext nombre_funcion() {
			return getRuleContext(Nombre_funcionContext.class,0);
		}
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public Tipo_devolucionContext tipo_devolucion() {
			return getRuleContext(Tipo_devolucionContext.class,0);
		}
		public Header_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_funcion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).enterHeader_funcion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnakecsvParserListener ) ((SnakecsvParserListener)listener).exitHeader_funcion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnakecsvParserVisitor ) return ((SnakecsvParserVisitor<? extends T>)visitor).visitHeader_funcion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Header_funcionContext header_funcion() throws RecognitionException {
		Header_funcionContext _localctx = new Header_funcionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_header_funcion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			pr_funcion();
			setState(164);
			nombre_funcion();
			setState(165);
			parametros();
			setState(166);
			tipo_devolucion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
